# devcontainers

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
app/: main.py
tests/: test_main.py
