[tool.poetry]
name = "devcontainers"
version = "0.1.0"
description = "Experiments with DevContainers"
authors = ["Ankur Divekar <ankur.divekar@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.33.0"
pandas = "^2.2.1"
pydantic = "^2.6.4"
fastapi = "^0.110.1"
ipython = "^8.23.0"
ipywidgets = "^8.1.2"
tqdm = "^4.66.2"
streamlit-extras = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
